--- a/redpajama_chat3b_lora.ipynb
+++ b/redpajama_chat3b_lora.ipynb
@@ -50,8 +50,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# raw_dataset_link = \"https://huggingface.co/datasets/Fredithefish/Instruction-Tuning-with-GPT-4-RedPajama-Chat/resolve/main/alpaca_gpt4_data.jsonl\" #@param {type: \"string\"}\n",
-        "raw_dataset_link = \"https://github.com/Instruction-Tuning-with-GPT-4/GPT-4-LLM/blob/7542d37014734a3b369e66fa697c4da78fd2a90f/data/alpaca_gpt4_data.json\" #@param {type: \"string\"}\n",
+        "raw_dataset_link = \"https://huggingface.co/datasets/Fredithefish/Instruction-Tuning-with-GPT-4-RedPajama-Chat/resolve/main/alpaca_gpt4_data.jsonl\" #@param {type: \"string\"}\n",
         "\n",
         "base_model_hf = \"togethercomputer/RedPajama-INCITE-Chat-3B-v1\" #@param {type: \"string\"}\n",
         "finetune_epochs = 1 #@param {type: \"integer\"}\n",
